--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -5,6 +5,7 @@ deny 103.126.161.54;
 deny 103.129.222.46;
 deny 103.163.218.11;
 deny 103.172.134.26;
+deny 103.174.253.222;
 deny 103.193.179.233;
 deny 103.208.86.5;
 deny 103.251.167.10;
@@ -1159,6 +1160,7 @@ deny 2a04:52c0:130:896e::1;
 deny 2a04:52c0:130:d285::1;
 deny 2a04:9dc0:31::c0cc:4d;
 deny 2a04:9dc0:31::c0cc:73;
+deny 2a04:9dc0:31::c0cc:fb;
 deny 2a05:541:110:20::1;
 deny 2a05:541:110:3e::1;
 deny 2a05:541:121:33::1;
@@ -1444,7 +1446,7 @@ deny 37.252.255.135;
 deny 37.48.120.196;
 deny 37.48.70.156;
 deny 38.242.254.131;
-deny 3.91.140.223;
+deny 3.85.69.46;
 deny 45.11.59.28;
 deny 45.118.133.44;
 deny 45.12.3.80;
@@ -1633,6 +1635,7 @@ deny 82.68.49.227;
 deny 83.217.9.73;
 deny 83.96.213.63;
 deny 83.97.20.115;
+deny 83.97.20.251;
 deny 83.97.20.77;
 deny 84.16.224.227;
 deny 84.211.225.54;
