--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -6,6 +6,7 @@ allow 103.129.222.46;
 allow 103.163.218.11;
 allow 103.172.134.26;
 allow 103.193.179.233;
+allow 103.196.37.111;
 allow 103.208.86.5;
 allow 103.251.167.10;
 allow 103.251.167.20;
@@ -111,7 +112,6 @@ allow 109.70.100.68;
 allow 109.70.100.69;
 allow 109.70.100.70;
 allow 109.70.100.71;
-allow 118.163.74.160;
 allow 121.160.200.13;
 allow 121.78.28.175;
 allow 123.253.35.32;
@@ -213,7 +213,6 @@ allow 178.218.144.51;
 allow 178.218.144.64;
 allow 178.218.144.96;
 allow 178.218.144.99;
-allow 178.30.76.250;
 allow 179.43.128.16;
 allow 179.43.159.194;
 allow 179.43.159.195;
@@ -801,7 +800,6 @@ allow 2001:67c:89c:702:1ce:1ce:babe:8;
 allow 2001:67c:89c:702:1ce:1ce:babe:9;
 allow 2001:780:107:b::85;
 allow 2001:910:1400:107::2;
-allow 2001:b030:2422::7234;
 allow 2001:bc8:1600:472a::1;
 allow 2001:bc8:700:9212::1;
 allow 2001:bf0:666::666;
@@ -1047,6 +1045,7 @@ allow 2620:7:6001::185;
 allow 2620:7:6001::186;
 allow 2620:7:6001::187;
 allow 2620:7:6001::188;
+allow 2620:95:4007::111;
 allow 2800:ba0:6:c1::4858;
 allow 2a00:11c0:1b:aa2::5;
 allow 2a00:11c0:1c:311::5;
@@ -1440,6 +1439,7 @@ allow 37.252.255.135;
 allow 37.48.120.196;
 allow 37.48.70.156;
 allow 41.216.183.87;
+allow 44.215.145.129;
 allow 45.11.59.28;
 allow 45.118.133.44;
 allow 45.12.3.80;
@@ -1559,7 +1559,6 @@ allow 5.2.72.110;
 allow 5.2.79.179;
 allow 5.2.79.190;
 allow 5.34.182.203;
-allow 54.167.214.230;
 allow 5.42.66.6;
 allow 5.42.80.232;
 allow 5.42.80.233;
@@ -1579,7 +1578,6 @@ allow 62.182.83.179;
 allow 62.182.84.146;
 allow 64.227.115.78;
 allow 66.146.193.33;
-allow 66.220.242.222;
 allow 66.78.40.147;
 allow 67.219.109.141;
 allow 71.19.144.106;
@@ -1607,6 +1605,7 @@ allow 77.91.85.147;
 allow 77.91.86.95;
 allow 77.91.87.79;
 allow 78.142.18.219;
+allow 79.102.30.6;
 allow 79.124.8.241;
 allow 79.137.198.213;
 allow 80.210.78.252;
@@ -1737,6 +1736,7 @@ allow 95.142.161.63;
 allow 95.143.193.125;
 allow 95.164.4.104;
 allow 95.164.46.204;
+allow 95.168.173.143;
 allow 95.211.244.28;
 allow 96.126.98.146;
 allow 96.27.198.133;
