--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -108,7 +108,6 @@ allow 2001:67c:89c:702:1ce:1ce:babe:8;
 allow 2001:67c:89c:702:1ce:1ce:babe:9;
 allow 2001:780:107:b::85;
 allow 2001:910:1400:107::2;
-allow 2001:b030:2422::7234;
 allow 2001:bc8:1600:472a::1;
 allow 2001:bc8:700:9212::1;
 allow 2001:bf0:666::666;
@@ -257,6 +256,7 @@ allow 2620:7:6001::185;
 allow 2620:7:6001::186;
 allow 2620:7:6001::187;
 allow 2620:7:6001::188;
+allow 2620:95:4007::111;
 allow 2800:ba0:6:c1::4858;
 allow 2a00:11c0:1b:aa2::5;
 allow 2a00:11c0:1c:311::5;
