--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -6,7 +6,6 @@ allow 103.126.161.54;
 allow 103.129.222.46;
 allow 103.163.218.11;
 allow 103.172.134.26;
-allow 103.174.253.222;
 allow 103.193.179.233;
 allow 103.196.37.111;
 allow 103.208.86.5;
@@ -288,6 +287,7 @@ allow 185.153.197.227;
 allow 185.154.110.142;
 allow 185.154.110.17;
 allow 185.165.169.239;
+allow 185.165.169.42;
 allow 185.165.171.84;
 allow 185.165.190.111;
 allow 185.170.114.25;
@@ -640,7 +640,6 @@ allow 193.218.118.160;
 allow 193.218.118.173;
 allow 193.218.118.178;
 allow 193.218.118.182;
-allow 193.218.118.188;
 allow 193.218.118.89;
 allow 193.233.133.109;
 allow 193.233.133.42;
@@ -701,6 +700,8 @@ allow 2001:1af8:4700:a114:6::1;
 allow 2001:1b60:2:1:3935:104:0:1;
 allow 2001:1b60:3:221:3132:102:0:1;
 allow 2001:1b60:3:221:4134:101:0:1;
+allow 2001:1b60:3:239:1003:103:0:1;
+allow 2001:1b60:3:239:1003:106:0:1;
 allow 200.122.181.2;
 allow 2001:40e8:0:f090::100;
 allow 2001:41d0:1008:20d1::1;
@@ -1072,6 +1073,7 @@ allow 2a01:6340:2:501::10;
 allow 2a01:6340:2:501::20;
 allow 2a01:7e00::f03c:91ff:fe56:2656;
 allow 2a01:7e02::f03c:94ff:fe88:6fd4;
+allow 2a02:13f0:8100:6:688:5fe9:2e1f:1;
 allow 2a02:16d0:0:5::1;
 allow 2a02:2970:1001::4b;
 allow 2a02:418:6017::147;
@@ -1406,7 +1408,6 @@ allow 2a0f:df00:0:255::205;
 allow 2a0f:df00:0:255::206;
 allow 2a0f:e586:f:f::133;
 allow 2a0f:e586:f:f::182;
-allow 2a0f:e586:f:f::188;
 allow 2a0f:e586:f:f:491a:cbe0:3511:bfd4;
 allow 2a0f:e586:f:f:a052:2166:bef9:a432;
 allow 2a0f:e586:f:f:baa4:d491:90be:dca5;
@@ -1446,7 +1447,7 @@ allow 37.48.120.196;
 allow 37.48.70.156;
 allow 38.97.116.244;
 allow 41.216.183.87;
-allow 44.198.42.13;
+allow 44.207.119.200;
 allow 45.11.59.28;
 allow 45.118.133.44;
 allow 45.12.3.80;
@@ -1641,9 +1642,12 @@ allow 85.17.9.83;
 allow 85.215.76.62;
 allow 85.239.41.130;
 allow 85.93.218.204;
+allow 86.104.194.13;
 allow 87.118.110.27;
 allow 87.118.116.103;
 allow 87.118.116.90;
+allow 87.118.122.30;
+allow 87.118.122.51;
 allow 87.120.254.132;
 allow 88.209.197.213;
 allow 88.80.20.86;
@@ -1717,6 +1721,7 @@ allow 94.142.244.16;
 allow 94.158.246.64;
 allow 94.16.112.22;
 allow 94.16.116.81;
+allow 94.16.116.86;
 allow 94.16.121.226;
 allow 94.16.121.91;
 allow 94.177.106.37;
