--- a/set_real_ip_from-tor_ips_v6.conf
+++ b/set_real_ip_from-tor_ips_v6.conf
@@ -69,7 +69,6 @@ set_real_ip_from 2001:67c:6ec:203:192:42:116:200;
 set_real_ip_from 2001:67c:6ec:203:192:42:116:201;
 set_real_ip_from 2001:67c:6ec:203:192:42:116:202;
 set_real_ip_from 2001:67c:6ec:203:192:42:116:203;
-set_real_ip_from 2001:67c:6ec:203:192:42:116:204;
 set_real_ip_from 2001:67c:6ec:203:192:42:116:208;
 set_real_ip_from 2001:67c:6ec:203:192:42:116:209;
 set_real_ip_from 2001:67c:6ec:203:192:42:116:210;
@@ -168,6 +167,7 @@ set_real_ip_from 2605:6400:10:984:41e7:4ad6:a11e:cdcc;
 set_real_ip_from 2605:6400:10:aa1:2db8:1c14:2191:4aa8;
 set_real_ip_from 2605:6400:10:c39:3b1c:a9d9:fb78:d7f1;
 set_real_ip_from 2605:6400:20:104e::2;
+set_real_ip_from 2605:6400:20:1a8:f5f2:4a28:b5ed:931d;
 set_real_ip_from 2605:6400:20:1c01:7d33:a5db:c2b9:1092;
 set_real_ip_from 2605:6400:20:2417::69;
 set_real_ip_from 2605:6400:20:3ea:c2a3:1162:7224:e5df;
@@ -612,6 +612,7 @@ set_real_ip_from 2a0f:df00:0:255::205;
 set_real_ip_from 2a0f:df00:0:255::206;
 set_real_ip_from 2a0f:e586:f:f::133;
 set_real_ip_from 2a0f:e586:f:f::182;
+set_real_ip_from 2a0f:e586:f:f::188;
 set_real_ip_from 2a0f:e586:f:f:491a:cbe0:3511:bfd4;
 set_real_ip_from 2a0f:e586:f:f:a052:2166:bef9:a432;
 set_real_ip_from 2a0f:e586:f:f:baa4:d491:90be:dca5;
